; ModuleID = '/home/carl/AnghaBench/postgres/src/common/extr_ip.c_pg_freeaddrinfo_all.c'
source_filename = "/home/carl/AnghaBench/postgres/src/common/extr_ip.c_pg_freeaddrinfo_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.addrinfo = type { %struct.addrinfo*, %struct.addrinfo* }

@AF_UNIX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pg_freeaddrinfo_all(i32 %0, %struct.addrinfo* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.addrinfo*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.addrinfo* %1, %struct.addrinfo** %4, align 8
  %5 = load %struct.addrinfo*, %struct.addrinfo** %4, align 8
  %6 = icmp ne %struct.addrinfo* %5, null
  br i1 %6, label %7, label %10

7:                                                ; preds = %2
  %8 = load %struct.addrinfo*, %struct.addrinfo** %4, align 8
  %9 = call i32 @freeaddrinfo(%struct.addrinfo* %8)
  br label %10

10:                                               ; preds = %7, %2
  ret void
}

declare dso_local i32 @freeaddrinfo(%struct.addrinfo*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
